
      - OFS Image: Image and File updated to use isinstance(data, str)
        and raises TypeError upon encountering unicode objects.

      - OFS Application: Updated deprecation warnings.
        Support for '__ac_permissions__' and 'meta_types' will be removed in
        Zope 2.11, 'methods' support might remain longer.

    Features added

      - MailHost: now uses zope.sendmail for delivering the mail. With this change
        MailHost integrates with the Zope transaction system (avoids sending dupe
        emails in case of conflict errors). In addition MailHost now provides 
        support for asynchronous mail delivery. The 'Use queue' configuration 
        option will create a mail queue on the filesystem (under 
        'Queue directory') and start a queue thread that checks the queue every
        three seconds. This decouples the sending of mail from its delivery.
        In addition MailHosts now supports encrypted connections through TLS/SSL.

      - integrated ZODB 3.8
    
      - integrated Zope 3.4

      - Support for using zopectl on Windows has been added. All commands are
        supported and there are two Windows specific ones: install and remove,
        which install or remove the Windows service. The start, stop and
        restart commands handle the Windows service. In order to use them, you
        need to call 'bin\zopectl install' once.

      - ZCatalog result objects (catalog brains) now have an interface,
        ZCatalog.interfaces.ICatalogBrain.

      - A new module, AccessControl.requestmethod, provides a decorator
        factory that limits decorated methods to one request method only.
        For example, marking a method with @requestmethod('POST') limits
        that method to POST requests only when published. Several
        security-related methods have been limited to POST only.

      - PythonScripts: allow usage of Python's 'sets' module
